--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.2",
     "express": "^4.18.1",
+    "jsonwebtoken": "^8.5.1",
     "multer": "^1.4.5-lts.1",
+    "passport": "^0.6.0",
+    "passport-jwt": "^4.0.0",
     "sequelize": "^6.21.6",
     "sqlite3": "^5.1.0"
   },
